@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="UTF-8" standalone="yes"?>
 <addon id="plugin.program.utorrent"
        name="uTorrent"
-       version="1.0.3"
+       version="1.0.4"
        provider-name="Taxigps">
   <requires>
     <import addon="xbmc.python" version="1.0"/>
